homepage .env file fixes

--- a/teaching/homepage/docker-compose.yaml
+++ b/teaching/homepage/docker-compose.yaml
@@ -26,10 +26,12 @@ services:
       HOMEPAGE_ALLOWED_HOSTS: lab.nexuswarrior.site,192.168.10.29:3001,localhost:3001
       PUID: ${PUID:-1000}
       PGID: ${PGID:-1000}
-      LOG_LEVEL: debug
-      HOMEPAGE_VAR_PROXMOX_USERNAME: ${HOMEPAGE_VAR_PROXMOX_USERNAME}
-      HOMEPAGE_VAR_PROXMOX_PASSWORD: ${HOMEPAGE_VAR_PROXMOX_PASSWORD}
-      HOMEPAGE_VAR_PORTAINER_KEY: ${HOMEPAGE_VAR_PORTAINER_KEY}
+      LOG_LEVEL: ${LOG_LEVEL:-info}
+
+      # Infrastructure widgets (optional - widgets won't work without keys)
+      HOMEPAGE_VAR_PROXMOX_USERNAME: ${HOMEPAGE_VAR_PROXMOX_USERNAME:-}
+      HOMEPAGE_VAR_PROXMOX_PASSWORD: ${HOMEPAGE_VAR_PROXMOX_PASSWORD:-}
+      HOMEPAGE_VAR_PORTAINER_KEY: ${HOMEPAGE_VAR_PORTAINER_KEY:-}
     restart: unless-stopped
 
 networks:
