Fix homepage config deployment - allow YAML files to sync
- Changed workflow to sync homepage config YAML files
- Previously excluded entire homepage/config/ directory
- Now only excludes runtime data (*.db, logs/)
- Added manual sync script for immediate fix
- Added monitoring data exclusion for uptime-kuma

--- a/.github/workflows/deploy-homelab.yml
+++ b/.github/workflows/deploy-homelab.yml
@@ -100,12 +100,14 @@ jobs:
             --exclude='homelab/traefik/cf-token' \
             --exclude='homelab/traefik/config/acme.json' \
             --exclude='homelab/traefik/logs/' \
-            --exclude='homelab/homepage/config/' \
+            --exclude='homelab/homepage/config/*.db' \
+            --exclude='homelab/homepage/config/logs/' \
             --exclude='homelab/jellyfin/config/' \
             --exclude='homelab/jellyfin/jellyseerr/' \
             --exclude='homelab/jellyfin/jellystat/' \
             --exclude='homelab/servarr/*/config/' \
             --exclude='homelab/rustdesk/data/' \
+            --exclude='homelab/monitoring/uptime-kuma/' \
             --exclude='teaching/' \
             $GITHUB_WORKSPACE/ "${{ env.DEPLOY_DIR }}/" || { echo "⚠️ Some files couldn't be synced"; exit 0; }
 
